fix: change overflow

--- a/src/components/TitleDivider/TitleDivider.module.css
+++ b/src/components/TitleDivider/TitleDivider.module.css
@@ -1,7 +1,7 @@
 .TitleDividerWrapper {
   position: relative;
   margin-top: 70px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .orange::after {
